# L2

./: Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
api/v1/models/: recommendations.py
api/v1/routes/: recommendations.py
api/v1/services/: prompt_builder.py  prompt_trigger.py
test/: test_get_travel_recommendations.py
